# AoC

./: README.md
2018-Rust/day02/: Cargo.toml
2019-Cpp/: CMakeLists.txt
2019-Cpp/1/: day1.cpp
2019-Cpp/10/: day10.cpp  example2 copy.txt
2019-Cpp/11/: day11.cpp  intcode.h
2019-Cpp/12/: day12.cpp
2019-Cpp/13/: day13.cpp  intcode.h
2019-Cpp/14/: day14.cpp
2019-Cpp/2/: day2.cpp
2019-Cpp/3/: day3.cpp
2019-Cpp/4/: day4.cpp
2019-Cpp/5/: day5.cpp
2019-Cpp/6/: day6.cpp  example.txt
2019-Cpp/7/: day7.cpp  intcode.cpp  permutation_test.cpp
2019-Cpp/8/: day8.cpp
2019-Cpp/9/: day9.cpp  intcode.h
2020/1/: report_repair.py
2020/2/: password_philosophy.py
2020/3/: toboggan_trajectory.py
2020/4/: passport_processing.py
2020/5/: binary_boarding.py
2020/6/: custom_customs.py
2021/1/: sonar.py
2021/10/: syntax_parsing.py
2021/11/: dumbo_octopus.py
2021/12/: passage_pathing.py
2021/13/: folding.py
2021/14/: polymerization.py
2021/15/: chiton_path.py
2021/16/: packet_decoder.py
2021/17/: trickshot.py
2021/18/: snailfish_math.py
2021/2/: dive.py
2021/20/: trench_map.py
2021/21/: dirac_dice.py
2021/22/: reactor_reboot.py
2021/25/: sea_cucumber.py
2021/3/: binary.py
2021/4/: bingo.py
2021/5/: hydrothermalVents.py
2021/6/: lanternfish.py
2021/7/: crabs.py
2021/8/: digits.py
2021/9/: smoke_basin.py
2022/1/: day1.py
2022/10/: day10.py
2022/11/: day11.py
2022/12/: day12.py
2022/13/: day13.py
2022/14/: day14.py
2022/15/: day15.py
2022/16/: day16.py
2023/: .sourcery.yaml  template.py
2023/1/: 1.py
(+80 files in other folders)
