cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 20)

project(AdventOfCode)

add_executable(Day1 1/day1.cpp)
add_executable(Day2 2/day2.cpp)
add_executable(Day3 3/day3.cpp)
add_executable(Day4 4/day4.cpp)
add_executable(Day5 5/day5.cpp)
add_executable(Day6 6/day6.cpp)
add_executable(Day7 7/day7.cpp)
add_executable(Day8 8/day8.cpp)
add_executable(Day9 9/day9.cpp)
add_executable(Day10 10/day10.cpp)
add_executable(Day11 11/day11.cpp)
add_executable(Day12 12/day12.cpp)